# Agentic_AI

./: README.md
Crew_AI_Projects/: README.md
Crew_AI_Projects/Prompt_Chaining/: .env  README.md  pyproject.toml  stats.md
Crew_AI_Projects/Prompt_Chaining/src/project2/: prompt.py
Generative_AI_Projects/PRoject_04_FIne_Tuning_Project/: FIne_Tuning_Project.ipynb
Generative_AI_Projects/Project_01_LangChain_with_Gemini/: LangChain_with_Gemini.ipynb  README.md  read.md
Generative_AI_Projects/Project_02_LangChain_RAG_Project/: History of Agentic AI.txt  LangChain _RAG_Project.ipynb  README.md
Generative_AI_Projects/Project_03_Tool_calling_using_gemini2..0/: Tool_calling_using_gemini2.0.ipynb
Generative_AI_Projects/Project_04_FIne_Tuning_Project/: FIne_Tuning_Project.ipynb
